Make contact look better

--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -62,7 +62,7 @@
 @media (max-width: 700px) {
   .kontakt-div input,
   .kontakt-div textarea {
-    min-width: 400px;
+    min-width: 90vw;
   }
 
   .main-nav {
@@ -174,7 +174,12 @@
 
 @media (max-width: 500px) {
   .portfolio-header.reveal.visible,
-  .main-nav, .portfolio-header, * {
+  .main-nav, .portfolio-header {
     max-width: 90vw;
+  }
+
+  .kontakt-div {    
+     padding: 0px !important;  
+     
   }
 }
