--- a/scss/mixins/layout/felles/_effekter.scss
+++ b/scss/mixins/layout/felles/_effekter.scss
@@ -1,9 +1,8 @@
 /* Effekter */
 @use "../../variabler";
-.fade {
-    transition: background-color 500ms;
-    &:hover {
-      background-color: variabler.$light;
-    }
+.animasjon {
+  transition: background-color 500ms;
+  &:hover {
+    background-color: variabler.$light;
   }
-  
+}
