--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -40,7 +40,7 @@
 @media (min-width: 700px) {
   .main-nav {
     background: variabler.$dark;
-    opacity: 0;
+   // opacity: 0;
     ul {
       display: grid;
       grid-gap: 20px;
