--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,4 +11,8 @@ body {
   color: silver;
 }
 
+.shadow-outline-red {
+	box-shadow: 0 0 0 3px rgba(255,0,0, 0.5);
+}
+
 @import "tailwindcss/utilities";
