--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,7 @@
 @import "tailwindcss/components";
 
 body {
-  font-family: "Lato";
+  font-family: "Lato, sans-serif;";
   background-color: #f2f2f2;
 }
 
@@ -12,7 +12,7 @@ body {
 }
 
 .shadow-outline-red {
-	box-shadow: 0 0 0 3px rgba(255,0,0, 0.5);
+  box-shadow: 0 0 0 3px rgba(255, 0, 0, 0.5);
 }
 
 @import "tailwindcss/utilities";
