--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,7 @@
 @import "tailwindcss/components";
 
 body {
-  font-family: "Lato, sans-serif";
+  font-family: Lato, sans-serif;
   background-color: #f2f2f2;
 }
 
