--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,14 @@ body {
   background-color: #f2f2f2;
 }
 
+#hamburger {
+  width: 2.5rem;
+  height: 2rem;
+  margin: 1rem;
+  color: #fff;
+  cursor: pointer;
+}
+
 .shadow-outline-red {
   box-shadow: 0 0 0 3px rgba(255, 0, 0, 0.5);
 }
