--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,11 +7,6 @@ body {
   background-color: #f2f2f2;
 }
 
-#test {
-  font-size: 2rem;
-  color: #fff;
-}
-
 #hamburger {
   width: 2.5rem;
   height: 2rem;
@@ -36,6 +31,10 @@ body {
 }
 .animate__delay-2s {
   --animate-delay: 0.5s;
+}
+
+.animate__delay-3s {
+  --animate-delay: 0.75s;
 }
 
 @import "tailwindcss/utilities";
