--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,20 +21,28 @@ body {
 }
 
 #main-hero {
-  background-image: url("../assets//blue-hero.jpg");
+  opacity: 0;
+  background-image: url("../assets/blue-hero.jpg");
   height: 450px;
 }
 
 /* All delay classes will take less time to start */
 .animate__delay-1s {
-  --animate-delay: 0.25s;
+  --animate-delay: 0.20s;
 }
 .animate__delay-2s {
-  --animate-delay: 0.5s;
+  --animate-delay: 0.40s;
 }
 
 .animate__delay-3s {
-  --animate-delay: 0.75s;
+  --animate-delay: 0.60s;
+}
+
+.animate__delay-4s {
+  --animate-delay: 0.80s;
+}
+.animate__delay-5s {
+  --animate-delay: 1.00s;
 }
 
 @import "tailwindcss/utilities";
