Replace Animate CSS with React Spring on front page

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,7 +17,7 @@ body {
 
 /* Custom styling for main hero image */
 #main-hero {
-  opacity: 0;
+  /* opacity: 0; */
   background-image: url("../assets/blue-hero.jpg");
   height: 450px;  
 }
