--- a/src/css/button-animate.css
+++ b/src/css/button-animate.css
@@ -1,4 +1,4 @@
-.portfolio-experiment a {
+.animate-link a {
     color: white;
     padding: 0.7em calc(0.7em * 1.2);
     display: inline-block;
@@ -6,12 +6,12 @@
     position: relative;    
     cursor: pointer;    
 }
-.portfolio-experiment a .text {    
+.animate-link a .text {    
     transform: translate3d(0, 0.7em, 0);
     display: block;
     transition: transform 0.4s cubic-bezier(0.2, 0, 0, 1) 0.4s;
 }
-.portfolio-experiment a:after {
+.animate-link a:after {
     /*position: absolute;*/
     content: '';
     bottom: -3px;
@@ -22,69 +22,69 @@
     transition: transform 0.8s cubic-bezier(1, 0, 0.37, 1) 0.2s, right 0.2s cubic-bezier(0.04, 0.48, 0, 1) 0.6s, left 0.4s cubic-bezier(0.04, 0.48, 0, 1) 0.6s;
     transform-origin: left;
 }
-.portfolio-experiment .line {
+.animate-link .line {
     position: absolute;
     background: #fff;
 }
-.portfolio-experiment .line.-right, .portfolio-experiment .line.-left {
+.animate-link .line.-right, .animate-link .line.-left {
     width: 3px;
     bottom: -3px;
     top: -3px;
     transform: scale3d(1, 0, 1);
 }
-.portfolio-experiment .line.-top, .portfolio-experiment .line.-bottom {
+.animate-link .line.-top, .animate-link .line.-bottom {
     height: 3px;
     left: 0px;
     right: 0px;
     transform: scale3d(0, 1, 1);
 }
-.portfolio-experiment .line.-right {
+.animate-link .line.-right {
     right: -3px;
     transition: transform 0.1s cubic-bezier(1, 0, 0.65, 1.01) 0.23s;
     transform-origin: top;
 }
-.portfolio-experiment .line.-top {
+.animate-link .line.-top {
     top: -3px;
     transition: transform 0.08s linear 0.43s;
     transform-origin: left;
 }
-.portfolio-experiment .line.-left {
+.animate-link .line.-left {
     left: -3px;
     transition: transform 0.08s linear 0.51s;
     transform-origin: bottom;
 }
-.portfolio-experiment .line.-bottom {
+.animate-link .line.-bottom {
     bottom: -3px;    
     transition: transform 0.3s cubic-bezier(1, 0, 0.65, 1.01);
     transform-origin: right;
 }
-.portfolio-experiment a:hover .text, .portfolio-experiment a:active .text {
+.animate-link a:hover .text, .animate-link a:active .text {
     transform: translate3d(0, 0, 0);
     transition: transform 0.6s cubic-bezier(0.2, 0, 0, 1) 0.4s;
 }
-.portfolio-experiment a:hover:after, .portfolio-experiment a:active:after {
+.animate-link a:hover:after, .animate-link a:active:after {
     transform: scale3d(0, 1, 1);
     right: -2px;
     left: -2px;
     transform-origin: right;
     transition: transform 0.2s cubic-bezier(1, 0, 0.65, 1.01) 0.17s, right 0.2s cubic-bezier(1, 0, 0.65, 1.01), left 0s 0.3s;
 }
-.portfolio-experiment a:hover .line, .portfolio-experiment a:active .line {
+.animate-link a:hover .line, .animate-link a:active .line {
     transform: scale3d(1, 1, 1);
 }
-.portfolio-experiment a:hover .line.-right, .portfolio-experiment a:active .line.-right {
+.animate-link a:hover .line.-right, .animate-link a:active .line.-right {
     transition: transform 0.1s cubic-bezier(1, 0, 0.65, 1.01) 0.2s;
     transform-origin: bottom;
 }
-.portfolio-experiment a:hover .line.-top, .portfolio-experiment a:active .line.-top {
+.animate-link a:hover .line.-top, .animate-link a:active .line.-top {
     transition: transform 0.08s linear 0.4s;
     transform-origin: right;
 }
-.portfolio-experiment a:hover .line.-left, .portfolio-experiment a:active .line.-left {
+.animate-link a:hover .line.-left, .animate-link a:active .line.-left {
     transition: transform 0.08s linear 0.48s;
     transform-origin: top;
 }
-.portfolio-experiment a:hover .line.-bottom, .portfolio-experiment a:active .line.-bottom {
+.animate-link a:hover .line.-bottom, .animate-link a:active .line.-bottom {
     transition: transform 0.5s cubic-bezier(0, 0.53, 0.29, 1) 0.56s;
     transform-origin: left;
 }
