--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,4 +21,12 @@ body {
   height: 450px;
 }
 
+/* Fix padding for old Safari devices */
+@supports (-webkit-touch-callout: none) {
+  /* CSS specific to iOS devices */
+  #projectdiv {
+    padding: 10px;
+  }
+}
+
 @import "tailwindcss/utilities";
