Move assets to their own folders

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,7 @@ body {
 
 /* Custom styling for main hero image */
 #main-hero {
-  background-image: url("../assets/blue-hero.jpg");
+  background-image: url("../assets/img/blue-hero.jpg");
   height: 450px;
 }
 
