--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,25 +2,27 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-/* Global font */
-body {
-  font-family: Lato, sans-serif;
-  background-color: #f2f2f2;
-}
+@layer components {
+  /* Global font */
+  body {
+    font-family: Lato, sans-serif;
+    background-color: #f2f2f2;
+  }
 
-/* Custom styling for hamburger SVG */
-#hamburger {
-  margin-right: 1rem;
-  color: #fff;
-  cursor: pointer;
-}
+  /* Custom styling for hamburger SVG */
+  #hamburger {
+    margin-right: 1rem;
+    color: #fff;
+    cursor: pointer;
+  }
 
-/* Custom styling for main hero image */
-#main-hero {
-  background-image: url("../assets/img/blue-hero.jpg");
-  height: 450px;
-}
+  /* Custom styling for main hero image */
+  #main-hero {
+    background-image: url("../assets/img/blue-hero.jpg");
+    height: 450px;
+  }
 
-#prosjektgrid {
-  grid-gap: 1rem;
+  #prosjektgrid {
+    grid-gap: 1rem;
+  }
 }
